upated package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nodetutorial",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "dependencies": {
     "express": "^4.13.3"
@@ -11,5 +10,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zchase/node-tutorial.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zchase/node-tutorial/issues"
+  },
+  "homepage": "https://github.com/zchase/node-tutorial#readme",
+  "description": ""
 }
