--- a/distelli-manifest.yml
+++ b/distelli-manifest.yml
@@ -12,6 +12,18 @@ zchase/nginx:
     - sudo apt-get update
     - sudo apt-get install nodejs -y
     - sudo apt-get install npm -y
+    # - 'if [ -a /etc/nginx ]; then'
+    # -     echo "NGINX is already installed"
+    # - else
+    # -     sudo apt-get install nginx
+    # - fi
+    # - 'if [ -a /etc/nginx/sites-enabled/default ]; then'
+    # -     sudo rm /etc/nginx/sites-enabled/default
+    # - else
+    # -     echo "Default NGINX already removed"
+    # - fi
+    - pwd
+
 
   Exec:
     - /usr/bin/nodejs app.js
