first test with nginx automated

--- a/distelli-manifest.yml
+++ b/distelli-manifest.yml
@@ -12,17 +12,29 @@ zchase/nginx:
     - sudo apt-get update
     - sudo apt-get install nodejs -y
     - sudo apt-get install npm -y
-    # - 'if [ -a /etc/nginx ]; then'
-    # -     echo "NGINX is already installed"
-    # - else
-    # -     sudo apt-get install nginx
-    # - fi
-    # - 'if [ -a /etc/nginx/sites-enabled/default ]; then'
-    # -     sudo rm /etc/nginx/sites-enabled/default
-    # - else
-    # -     echo "Default NGINX already removed"
-    # - fi
-    - pwd
+    - 'if [ -a /etc/nginx ]; then'
+    -     echo "NGINX is already installed"
+    - else
+    -     sudo apt-get install nginx
+    - fi
+    - 'if [ -a /etc/nginx/sites-enabled/default ]; then'
+    -     sudo rm /etc/nginx/sites-enabled/default
+    - else
+    -     echo "Default NGINX already removed"
+    - fi
+    - 'if [ -a /etc/nginx/sites-available/node ]; then'
+    -     sudo rm /etc/nginx/sites-available/node
+    -     sudo mv node /etc/nginx/sites-available/node
+    - else
+    -     sudo mv node /etc/nginx/sites-available/node
+    - fi
+    - 'if [ -a /etc/nginx/sites-enabled/node ]; then'
+    -     sudo rm /etc/nginx/sites-enabled/node
+    -     sudo ln -s /etc/nginx/sites-available/node /etc/nginx/sites-enabled/node
+    - else
+    -     sudo ln -s /etc/nginx/sites-available/node /etc/nginx/sites-enabled/node
+    - fi
+    - sudo service nginx restart
 
 
   Exec:
