--- a/distelli-manifest.yml
+++ b/distelli-manifest.yml
@@ -22,12 +22,12 @@ zchase/nginx:
     - else
     -     echo "Default NGINX already removed"
     - fi
-    - 'if [ -a /etc/nginx/sites-available/node ]; then'
-    -     sudo rm /etc/nginx/sites-available/node
-    -     sudo mv node /etc/nginx/sites-available/node
-    - else
-    -     sudo mv node /etc/nginx/sites-available/node
-    - fi
+    # - 'if [ -a /etc/nginx/sites-available/node ]; then'
+    # -     sudo rm /etc/nginx/sites-available/node
+    # -     mv node /etc/nginx/sites-available/node
+    # - else
+    # -     mv node /etc/nginx/sites-available/node
+    # - fi
     - 'if [ -a /etc/nginx/sites-enabled/node ]; then'
     -     sudo rm /etc/nginx/sites-enabled/node
     -     sudo ln -s /etc/nginx/sites-available/node /etc/nginx/sites-enabled/node
