--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.13.3",
+    "jasmine-node": "^1.14.5",
     "request": "^2.65.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "jasmine-node spec"
   },
   "author": "",
   "license": "ISC",
